# qcore

./: .gitignore  Cargo.toml  README.md  setup-ethernet  setup-routing  sims.toml
.cargo/: config.toml
5g-libs/asn1-per/src/: lib.rs
5g-libs/f1ap/src/: common.rs  f1ap_cu.rs  ies.rs  pdu.rs  test.rs  top_pdu.rs
5g-libs/nas/: Cargo.toml
5g-libs/nas/src/: lib.rs  nas_context.rs
5g-libs/ngap/: Cargo.toml
5g-libs/ngap/src/: common.rs  ies.rs  lib.rs  ngap_amf.rs  ngap_gnb.rs  pdu.rs  test.rs  top_pdu.rs
5g-libs/pdcp/src/: lib.rs
5g-libs/security/: Cargo.toml
5g-libs/security/src/: keygen.rs  lib.rs  resync.rs
5g-libs/xxap/: Cargo.toml
5g-libs/xxap/src/: conversion.rs  ies.rs  lib.rs  transaction.rs
docs/: Open5GS-comparative-load-testing.md  VTune-testing.md  backlog.md  howto.md  routing.md
docs/OpenAirInterface-testing/: README.md
docs/PacketRusher-testing/: README.md  config.yml  sims.toml
docs/designs/: attach.md  ebpf programs.md  service.md
docs/designs - existing/: attach.md  ebpf programs.md  on-lan UE addresses and dhcp.md  pdu_session_release.md
docs/designs - in progress/: clustering.md  ue serialization.md
docs/srsRAN-testing/: README.md  bladerf-testing.md  cu.yml  du-bladerf.yml  du-zmq.yml  gnb-bladerf.yml  gnb-zmq.yml  ngap_mode.md
ebpf/ebpf-common/: Cargo.toml
ebpf/ebpf-common/src/: lib.rs
ebpf/ebpf-userplane/: Cargo.toml  build.rs
ebpf/ebpf-userplane/src/: counters.rs  downlink_tc_program.rs  downlink_xdp_program.rs  globals.rs  headers.rs  lib.rs  main.rs  maps.rs  tc_utils.rs  uplink_tc_program.rs  uplink_xdp_program.rs  utils.rs  xdp_utils.rs
load-test/: Cargo.toml
load-test/src/: main.rs
qcore/: Cargo.toml  build.rs
qcore/src/: lib.rs  main.rs  qcore.rs  subscriber_db.rs
qcore/src/cluster/: mod.rs
qcore/src/data/: config.rs  ksi.rs  mod.rs  nas_context.rs  pdu_session.rs  security_context.rs  sim_creds.rs  sqn.rs  subscriber.rs  ue_context.rs  ue_context_5gc.rs  ue_context_ran.rs  ue_context_rrc.rs  ue_paging_info.rs  ue_security_capabilities.rs  userplane_session.rs
qcore/src/procedures/: f1ap_handler.rs  handler_api.rs  (+3 more)
tests/: Cargo.toml  test_sims.toml
tests/src/: data_network.rs  framework.rs  lib.rs  load_test.rs  mock.rs  mock_dhcp_server.rs  packet.rs  userplane.rs
tests/src/mock_du/: build_f1ap.rs  mod.rs
tests/src/mock_gnb/: build_ngap.rs  mod.rs
tests/src/mock_ue/: build_nas.rs  build_rrc.rs  builder.rs  mock_ue_5gc.rs  mock_ue_f1ap.rs  mock_ue_ngap.rs  mod.rs
tests/tests/: attach.rs  authentication_failure.rs  context_release_request.rs  context_release_request_f1ap.rs  context_release_request_ngap.rs  deregistration.rs  deregistration_during_nas_request.rs  dhcp_session.rs  disconnect_during_nas_request.rs  double_authentication_failure_recovery.rs  f1_removal.rs  f1ap_deregistration.rs  f1ap_service_request.rs  f1ap_session_reactivation.rs  guti_registration.rs  guti_registration_f1ap.rs  guti_registration_ngap.rs  ims_session_establishment.rs  load_test.rs  ngap_attach.rs  ngap_deregistration.rs  ngap_ethernet_session.rs  ngap_ethernet_session_not_enough_devices.rs  ngap_service_request.rs  ngap_service_request_variants.rs  ngap_session_reactivation.rs  ngap_session_release.rs  paging.rs  parallel_config_update_session_establishment.rs  registration_failure.rs  registration_unknown_guti.rs  reregistration.rs  sequential_sessions.rs  service_request_unknown_tmsi.rs  session_release.rs  synchronization_failure_recovery.rs  two_qcores.rs  two_ues.rs  unexpected_message.rs
(+92 files in other folders)
