[workspace]
resolver = "3"
members = [
    "5g-libs/asn1-per",
    "5g-libs/f1ap",
    "5g-libs/ngap",
    "5g-libs/nas",
    "tests",
    "qcore",
    "5g-libs/rrc",
    "5g-libs/xxap",
    "5g-libs/security", 
    "ebpf/ebpf-userplane",
    "ebpf/ebpf-common", "5g-libs/nas",
]
default-members = [
    "5g-libs/asn1-per",
    "5g-libs/f1ap",
    "5g-libs/nas",
    "tests",
    "qcore",
    "5g-libs/rrc",
    "5g-libs/xxap",
    "5g-libs/security", 
    "ebpf/ebpf-common",
]

[profile.dev]
debug = 1
opt-level = 1

[profile.release.package.ebpf-userplane]
debug = 2
codegen-units = 1

[profile.bench]
debug = true