[workspace]
resolver = "3"
members = [
    "5g-libs/asn1-per",
    "5g-libs/f1ap",
    "5g-libs/ngap",
    "5g-libs/nas",
    "tests",
    "qcore",
    "5g-libs/rrc",
    "5g-libs/xxap",
    "5g-libs/security", 
    "ebpf/ebpf-userplane",
    "ebpf/ebpf-common", 
    "5g-libs/nas", 
    "load-test",
]

# We want 
# - 'cargo run' to run qcore without the need to specify --bin.
# - 'cargo test' to be able to run any integration test, without the need to specify -p.
# - 'cargo clippy' to run over as many packages as possible.
#
# These requirements, given Cargo limitations (https://github.com/rust-lang/cargo/issues/7290)
# lead to "load-test" being separated out from the other tests and excluded from default-members. 
#
# ebpf-userplane is also excluded because it doesn't build using cargo build.
#
default-members = [
    "qcore",
    "tests",
    "5g-libs/asn1-per",
    "5g-libs/f1ap",
    "5g-libs/nas",
    "5g-libs/rrc",
    "5g-libs/xxap",
    "5g-libs/security", 
    "ebpf/ebpf-common",
]

[profile.dev]
debug = 1
opt-level = 1

[profile.bench]
debug = true
